# cube-comp

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
src/cube_comp/: __init__.py  command_line.py  competition.py  competition_api.py  competition_notifier.py  email_service.py  known_competitions.py  wca_service.py
src/cube_comp/templates/: competitions.txt.j2
tests/: competition_notifier_test.py  competition_test.py  known_competitions_test.py
