[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-comp"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "requests ~= 2.31.0",
    "Jinja2 ~= 3.1.3",
]

[project.scripts]
cube-comp = "cube_comp.command_line:main"

[tool.setuptools.package-data]
"mazes" = ["py.typed"]
