[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-comp"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "requests ~= 2.31.0",
    "Jinja2 ~= 3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest ~=7.4.0",
    "mypy ~=1.5.0",
    "black ~=23.7.0",
    "isort ~= 5.12.0",
    "flake8 ~= 6.1.0",

    "types-requests ~= 2.31.0",
]

[project.scripts]
cube-comp = "cube_comp.command_line:main"

[tool.setuptools.package-data]
"cube_comp" = ["py.typed"]
